intl/locale/windows/OSPreferences_win.cpp
@@ -6,9 +6,21 @@
 
 #include "OSPreferences.h"
 #include "mozilla/intl/LocaleService.h"
+#include "mozilla/WindowsVersion.h"
 #include "nsReadableUtils.h"
 
 #include <windows.h>
+
+#ifndef __MINGW32__  // WinRT headers not yet supported by MinGW
+#  include <roapi.h>
+#  include <wrl.h>
+#  include <Windows.System.UserProfile.h>
+
+using namespace Microsoft::WRL;
+using namespace Microsoft::WRL::Wrappers;
+using namespace ABI::Windows::Foundation::Collections;
+using namespace ABI::Windows::System::UserProfile;
+#endif
 
 using namespace mozilla::intl;
 
@@ -19,28 +31,88 @@ OSPreferences::~OSPreferences() {}
 bool OSPreferences::ReadSystemLocales(nsTArray<nsCString>& aLocaleList) {
   MOZ_ASSERT(aLocaleList.IsEmpty());
 
-  ULONG numLanguages = 0;
-  DWORD cchLanguagesBuffer = 0;
-  BOOL ok = GetUserPreferredUILanguages(MUI_LANGUAGE_NAME, &numLanguages,
-                                        nullptr, &cchLanguagesBuffer);
-  if (ok) {
-    AutoTArray<WCHAR, 64> locBuffer;
-    locBuffer.SetCapacity(cchLanguagesBuffer);
-    ok = GetUserPreferredUILanguages(MUI_LANGUAGE_NAME, &numLanguages,
-                                     locBuffer.Elements(), &cchLanguagesBuffer);
-    if (ok) {
-      NS_LossyConvertUTF16toASCII loc(locBuffer.Elements());
+#ifndef __MINGW32__
+  if (IsWin8OrLater()) {
+    // Try to get language list from GlobalizationPreferences; if this fails,
+    // we'll fall back to GetUserPreferredUILanguages.
+    // Per MSDN, these APIs are not available prior to Win8.
 
-      // We will only take the first locale from the returned list, because
-      // we do not support real fallback chains for RequestedLocales yet.
-      if (CanonicalizeLanguageTag(loc)) {
-        aLocaleList.AppendElement(loc);
-        return true;
+    // RoInitialize may fail with "cannot change thread mode after it is set",
+    // if the runtime was already initialized on this thread.
+    // This appears to be harmless, and we can proceed to attempt the following
+    // runtime calls.
+    HRESULT inited = RoInitialize(RO_INIT_MULTITHREADED);
+    if (SUCCEEDED(inited) || inited == RPC_E_CHANGED_MODE) {
+      ComPtr<IGlobalizationPreferencesStatics> globalizationPrefs;
+      ComPtr<IVectorView<HSTRING>> languages;
+      uint32_t count;
+      if (SUCCEEDED(RoGetActivationFactory(
+              HStringReference(
+                  RuntimeClass_Windows_System_UserProfile_GlobalizationPreferences)
+                  .Get(),
+              IID_PPV_ARGS(&globalizationPrefs))) &&
+          SUCCEEDED(globalizationPrefs->get_Languages(&languages)) &&
+          SUCCEEDED(languages->get_Size(&count))) {
+        for (uint32_t i = 0; i < count; ++i) {
+          HString lang;
+          if (SUCCEEDED(languages->GetAt(i, lang.GetAddressOf()))) {
+            unsigned int length;
+            const wchar_t* text = lang.GetRawBuffer(&length);
+            NS_LossyConvertUTF16toASCII loc(text, length);
+            if (CanonicalizeLanguageTag(loc)) {
+              aLocaleList.AppendElement(loc);
+            }
+          }
+        }
+      }
+
+      // Only close the runtime if we successfully initialized it above,
+      // otherwise we assume it was already in use and should be left as is.
+      if (SUCCEEDED(inited)) {
+        RoUninitialize();
       }
     }
   }
+#endif
 
-  return false;
+  // Per MSDN, GetUserPreferredUILanguages is available from Vista onwards,
+  // so we can use it unconditionally (although it may not work well!)
+  if (aLocaleList.IsEmpty()) {
+    // Note that according to the questioner at
+    // https://stackoverflow.com/questions/52849233/getuserpreferreduilanguages-never-returns-more-than-two-languages,
+    // this may not always return the full list of languages we'd expect.
+    // We should always get at least the first-preference lang, though.
+    ULONG numLanguages = 0;
+    DWORD cchLanguagesBuffer = 0;
+    if (!GetUserPreferredUILanguages(MUI_LANGUAGE_NAME, &numLanguages, nullptr,
+                                     &cchLanguagesBuffer)) {
+      return false;
+    }
+
+    AutoTArray<WCHAR, 64> locBuffer;
+    locBuffer.SetCapacity(cchLanguagesBuffer);
+    if (!GetUserPreferredUILanguages(MUI_LANGUAGE_NAME, &numLanguages,
+                                     locBuffer.Elements(),
+                                     &cchLanguagesBuffer)) {
+      return false;
+    }
+
+    const WCHAR* start = locBuffer.Elements();
+    const WCHAR* bufEnd = start + cchLanguagesBuffer;
+    while (bufEnd - start > 1 && *start) {
+      const WCHAR* end = start + 1;
+      while (bufEnd - end > 1 && *end) {
+        end++;
+      }
+      NS_LossyConvertUTF16toASCII loc(start, end - start);
+      if (CanonicalizeLanguageTag(loc)) {
+        aLocaleList.AppendElement(loc);
+      }
+      start = end + 1;
+    }
+  }
+
+  return !aLocaleList.IsEmpty();
 }
 
 bool OSPreferences::ReadRegionalPrefsLocales(nsTArray<nsCString>& aLocaleList) {
